suppress false positive sonar warning